# heron_software

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py  urdf.rviz
config/: joint_names_heron_urdf.yaml  urdf_mapping.rviz  urdf_navigation.rviz
config/laser_filter/: box_filter.yaml  range_filter.yaml
config/navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
config_laser_filter/: range_filter.yaml
heron/: __init__.py  battery.py  hello.py
install/: Installation.sh  README.md
map/: arene.pgm  arene.yaml  arene2.pgm  arene2.yaml  arenedemo.pgm  arenedemo.yaml  arenedemobg.pgm  arenedemobg.yaml  arenevide.pgm  arenevide.yaml  demo (copy).pgm  demo (copy).yaml  demo.pgm  demo.yaml
meshes/: base_link.STL  plate.STL  wheel_BL.STL  wheel_BR.STL  wheel_FL.STL  wheel_FL.dae  wheel_FR.STL  wheel_FR.dae
msg/: Encoders.msg  IRSensors.msg  Motion.msg  USIRSensors.msg  winch.msg
src/launch/: README.md  amcl.launch  battery.launch  bringUp.launch  controllerAndSensors.launch  display.launch  display_mapping.launch  display_navigation.launch  eband.launch  gazebo.launch  gmapping.launch  heronController.launch  lidar.launch  mapping.launch  master.launch  master_navigation.launch  move_base.launch  navigation.launch  one_robot.launch  startHeron.launch  take_key_position.launch  take_pos.launch  test.launch  xboxController.launch
src/nodes/: README.md  battery.py  controller.py  helloScript.py  remote.py
src/nodes/MotorControl/: RobotSpecs.h  RoboteqDevice.cpp  drive.cpp  odom.cpp  sample.cpp
src/nodes/actions/: simple_navigation_goal.cpp
src/nodes/battery/: battery.json  battery.py
src/nodes/config/: battery.json
src/nodes/converterUSBCAN/: converter.py  mainProgram_USB_CAN.py
src/nodes/converterUSBCAN/Component/: SensorManager.py  converter.py
src/nodes/converterUSBCAN/component/: __init__.py  converter.py  sensorManager.py  sensors.py  useful.py
src/nodes/node4IRUSB/: testPubWithCustomMsgFor1node4IR.py
src/nodes/remote/: recordPositions.py  remote.py
src/nodes/tf/: tf_broadcaster.cpp  tf_robot.cpp  tf_robot2.cpp
src/nodes/winch/: roboclaw_3.py  roboclaw_driver.py  roboclaw_node.py  winch.py  winch_pos_to_vel.py  winch_specs.py
src/tutorial_package/: __init__.py
urdf/: heron_urdf.csv  heron_urdf.urdf
